added button controls

--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
     <body>
         <header>
             <h1>serpentes</h1>
-        </header>
-        <main>
             <button class="start">start / reset</button>
             <h2>score: <span class="scoreboard">0</span></h2>
+        </header>
+
+        <main>
             <div class="grid"></div>
         </main>
+        
+        <footer>
+            <button class="btn btn-left">left</button>
+            <button class="btn btn-up">up</button>
+            <button class="btn btn-down">down</button>
+            <button class="btn btn-right">right</button>
+        </footer>
 
         <!-- scripts -->
         <script src="https://code.jquery.com/jquery-3.4.1.slim.js" crossorigin="anonymous"></script>
