Added GAME OVER display

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
         <main class="game-container">
             <div class="grid"></div>
+            <div class="game-over game-over-hidden">
+                <p class="game-over-text">game</p>
+                <p class="game-over-text">over</p>
+            </div>
         </main>
 
         <footer class="console-btns">
