--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             </div>
         </div>
 
+        <footer>
+            <p class="instructions">use buttons or keyboard arrows</p>
+            <p class="sign-off">&copy; ruair&iacute; conway <span class="copyright-year"></span></p>
+        </footer>
+
         <!-- scripts -->
         <script src="https://code.jquery.com/jquery-3.4.1.slim.js" crossorigin="anonymous"></script>
         <script src="main.js"></script>
